Mudança no título, no texto da section suporte, foi acrescentado mais um evento e adicionado o link do whatsapp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="hero">
         <div class="hero-content">
-            <h1>Comunidade da Igreja</h1>
+            <h1>Comunidade Cristã Evangélica Filadélfia</h1>
             <p class="slogan">Integração, apoio e participação para novos membros</p>
         </div>
     </header>
@@ -43,7 +43,7 @@
         <!-- Suporte -->
         <section id="suporte" class="tab-content">
             <h2><i class="fas fa-hand-holding-heart"></i> Suporte Espiritual, Emocional e Prático</h2>
-            <p>Disponibilizamos recursos como <strong>chats</strong>, <strong>fóruns</strong> e <strong>materiais educativos</strong> para que novos membros encontrem apoio, orientação e oportunidades de crescimento.</p>
+            <p>Disponibilizamos recursos como <strong>vídeos</strong>, <strong>livros</strong> e <strong>materiais educativos</strong> para que novos membros encontrem apoio, orientação e oportunidades de crescimento.</p>
             <div class="suporte-content">
                 <!-- Sugestões de livros -->
                 <div class="suporte-box">
@@ -71,10 +71,11 @@
         <section id="eventos" class="tab-content">
             <h2><i class="fas fa-calendar-alt"></i> Agenda da Igreja</h2>
             <ul class="agenda">
-                <li>Sábado 16:30 - Culto Kids</li>
-                <li>Sábado 19:30 - Culto de Estudo</li>
-                <li>Domingo 19:00 - Culto de Oração</li>
-                <li>Domingo 19:30 - Culto da Família</li>
+                <li>Terça 20:00H - Reunião de Casais </li>
+                <li>Sábado 16:30H - Culto Kids</li>
+                <li>Sábado 19:30H - Culto de Estudo</li>
+                <li>Domingo 19:00H - Culto de Oração</li>
+                <li>Domingo 19:30H - Culto da Família</li>
             </ul>
         </section>
 
@@ -82,7 +83,7 @@
         <section id="contato" class="tab-content">
             <h2><i class="fab fa-whatsapp"></i> Grupo no WhatsApp</h2>
             <p>
-                <a href="https://chat.whatsapp.com/SEU-LINK-AQUI" target="_blank" class="whatsapp-link">
+                <a href="https://chat.whatsapp.com/FOz8R97yVIO8eqXcYAzXkU?mode=ems_share_t" target="_blank" class="whatsapp-link">
                     <i class="fab fa-whatsapp"></i> Clique aqui para entrar no grupo
                 </a>
             </p>
