Algumas alterações de texto no HTML, CSS e JS

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Igreja - Todos os direitos reservados.</p>
+        <p>&copy; 2025 ICEBF - Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
