--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Igreja - Integração de Novos Membros</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
     <header class="hero">
@@ -111,8 +112,8 @@
 
     <footer>
         <p>&copy; 2025 ICEBF - Todos os direitos reservados.</p>
-    </footer>
+    </footer>   
+    <script type="module" src="script.js"></script>
 
-    <script src="script.js"></script>
 </body>
 </html>
